[package]
name = "yr-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "yr_proxy"
path = "src/lib.rs"

[[bin]]
name = "yr-proxy"
path = "src/main.rs"

[[bin]]
name = "function_proxy"
path = "src/main.rs"

[dependencies]
yr-common = { workspace = true }
yr-proto = { workspace = true }
yr-metastore-client = { workspace = true }
yr-data-client-lite = { workspace = true }
yr-runtime-manager = { path = "../runtime_manager" }

tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
etcd-client = { workspace = true }
# Pin to axum 0.7 for compatibility with tonic's router stack (tonic 0.13 pulls axum 0.7).
axum = "0.7"
tower-http = { version = "0.5", features = ["trace"] }

[dev-dependencies]
clap = { workspace = true }
async-trait = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
tower = { version = "0.5", features = ["util"] }
http = "1"
serde_json = { workspace = true }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
axum = "0.7"
yr-master = { path = "../function_master" }
yr-agent = { path = "../function_agent" }
yr-iam = { path = "../iam_server" }
parking_lot = { workspace = true }
yr-metastore-server = { path = "../meta_store" }
futures = { workspace = true }
yr-common = { workspace = true }
