[package]
name = "yr-iam"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "yr_iam"
path = "src/lib.rs"

[[bin]]
name = "yr-iam"
path = "src/main.rs"

[[bin]]
name = "iam_server"
path = "src/main.rs"

[dependencies]
yr-common = { workspace = true }
yr-metastore-client = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }
axum = { workspace = true }
etcd-client = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
yr-metastore-server = { path = "../meta_store" }
