[package]
name = "yr-metastore-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "yr-metastore-server"
path = "src/main.rs"

[[bin]]
name = "meta_store"
path = "src/main.rs"

[dependencies]
yr-common = { workspace = true }
yr-metastore-client = { workspace = true }
yr-proto = { workspace = true }

tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync", "net"] }
tonic = { workspace = true }
prost = { workspace = true }
etcd-client = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = "1.3"
dashmap = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
etcd-client = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
yr-metastore-client = { workspace = true }
