"""
Copyright (c) Huawei Technologies Co., Ltd. 2026. All rights reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
"""

load("@rules_cc//cc:defs.bzl", "cc_test")
load("@yuanrong_functionsystem//bazel:yr.bzl", "COPTS")

UNIT_TEST_SRCS = glob(
    ["**/*.cpp"],
    exclude = [
        # These executor tests are intentionally not part of the CMake monolithic
        # unit binary yet; keep Bazel aligned with the current CMake selection.
        "runtime_manager/executor/executor_test.cpp",
        "runtime_manager/executor/runtime_executor_test.cpp",
        # This subdirectory has a standalone CMakeLists.txt but is not wired
        # into the current CMake unit-test build; keep Bazel aligned.
        "function_proxy/local_scheduler/grpc_server/exec_service/**",
    ],
)

cc_test(
    name = "functionsystem_unit_test",
    linkstatic = True,
    srcs = UNIT_TEST_SRCS + glob(["**/*.h"]),
    copts = COPTS + [
        "-Wno-error",
        "-fno-access-control",
        "-Wno-missing-field-initializers",
        "-fvisibility=hidden",
        "-Ifunctionsystem/src",
        "-Ifunctionsystem/src/function_proxy",
        "-Ifunctionsystem/src/function_proxy/busproxy",
        "-Ifunctionsystem/src/function_proxy/local_scheduler",
        "-Ifunctionsystem/src/function_master",
        "-Ifunctionsystem/src/function_master/instance_manager",
        "-Ifunctionsystem/src/function_master/global_scheduler",
        "-Ifunctionsystem/src/function_master/scaler",
        "-Ifunctionsystem/src/function_master/system_function_loader",
        "-Ifunctionsystem/src/function_master/resource_group_manager",
        "-Ifunctionsystem/src/runtime_manager",
        "-Ifunctionsystem/src/domain_scheduler",
        "-Ifunctionsystem/src/function_agent",
        "-Ifunctionsystem/src/iam_server",
        "-Ifunctionsystem/src/meta_store/server/src",
        "-Ifunctionsystem/tests/unit",
        "-include",
        "functionsystem/tests/unit/gtest_sleep_compat.h",
    ],
    linkopts = [
        "-Wl,--no-as-needed",
        "-pthread",
        "-lcap",
        "-ldl",
    ],
    deps = [
        "//common/logs:logs_sdk",
        "//common/metrics:metrics_sdk",
        "//functionsystem/src/common:aksk",
        "//functionsystem/src/common:all_schedule_plugins",
        "//functionsystem/src/common:common_flags",
        "//functionsystem/src/common:explorer",
        "//functionsystem/src/common:file_monitor",
        "//functionsystem/src/common:heartbeat",
        "//functionsystem/src/common:hex",
        "//functionsystem/src/common:http",
        "//functionsystem/src/common:kube_client",
        "//functionsystem/src/common:leader",
        "//functionsystem/src/common:lru",
        "//functionsystem/src/common:metadata",
        "//functionsystem/src/common:metrics_adapter",
        "//functionsystem/src/common:meta_store_adapter",
        "//functionsystem/src/common:network",
        "//functionsystem/src/common:posix_pb",
        "//functionsystem/src/common:profile",
        "//functionsystem/src/common:register",
        "//functionsystem/src/common:resource_lock",
        "//functionsystem/src/common:resource_view",
        "//functionsystem/src/common:rpc",
        "//functionsystem/src/common:scheduler",
        "//functionsystem/src/common:scheduler_topology",
        "//functionsystem/src/common:service_json",
        "//functionsystem/src/common:status",
        "//functionsystem/src/common:trace_adapter",
        "//functionsystem/src/common:utils",
        "//functionsystem/src/common:yaml_tool",
        "//functionsystem/src/domain_scheduler:domain_scheduler_lib",
        "//functionsystem/src/function_agent:function_agent_lib",
        "//functionsystem/src/function_master:function_master_common_lib",
        "//functionsystem/src/function_master:function_master_sublibs",
        "//functionsystem/src/function_proxy:function_proxy_base_lib",
        "//functionsystem/src/function_proxy/local_scheduler:local_scheduler_lib",
        "//functionsystem/src/iam_server:iam_server_lib",
        "//functionsystem/src/meta_store/client/cpp:meta_store_client",
        "//functionsystem/src/meta_store/server:meta_store_lib",
        "//functionsystem/src/runtime_manager:runtime_manager_lib",
        "//functionsystem/tests/integration:future_test_helper",
        "@com_github_grpc_grpc//:gpr",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_protobuf//:protobuf",
        "@curl_sdk//:curl",
        "@datasystem_sdk//:datasystem_sdk",
        "@etcdapi//:etcdapi",
        "@gtest//:gtest",
        "@litebus//:litebus",
        "@minizip_sdk//:minizip_sdk",
        "@nlohmann_json//:nlohmann_json",
        "@obs_sdk//:obs_sdk",
        "@securec//:securec",
        "@yaml-cpp//:yaml-cpp",
    ],
)

cc_test(
    name = "frontend_proxy_service_test",
    linkstatic = True,
    srcs = [
        "function_proxy/local_scheduler/grpc_server/frontend_proxy_service_test.cpp",
        "gtest_sleep_compat.h",
        "main.cpp",
        "utils/port_helper.h",
    ],
    copts = COPTS + [
        "-Wno-error",
        "-fno-access-control",
        "-Wno-missing-field-initializers",
        "-fvisibility=hidden",
        "-Ifunctionsystem/src",
        "-Ifunctionsystem/src/function_proxy",
        "-Ifunctionsystem/src/function_proxy/local_scheduler",
        "-Ifunctionsystem/tests/unit",
        "-include",
        "functionsystem/tests/unit/gtest_sleep_compat.h",
    ],
    linkopts = [
        "-Wl,--no-as-needed",
        "-pthread",
        "-lcap",
        "-ldl",
    ],
    deps = [
        "//common/logs:logs_sdk",
        "//functionsystem/src/common:posix_pb",
        "//functionsystem/src/common:status",
        "//functionsystem/src/common:utils",
        "//functionsystem/src/function_proxy/local_scheduler:local_scheduler_lib",
        "@com_github_grpc_grpc//:grpc++",
        "@gtest//:gtest",
        "@litebus//:litebus",
    ],
)

cc_test(
    name = "frontend_proxy_lifecycle_handler_test",
    linkstatic = True,
    srcs = [
        "function_proxy/local_scheduler/grpc_server/frontend_proxy_lifecycle_handler_test.cpp",
        "gtest_sleep_compat.h",
        "main.cpp",
        "utils/port_helper.h",
    ],
    copts = COPTS + [
        "-Wno-error",
        "-fno-access-control",
        "-Wno-missing-field-initializers",
        "-fvisibility=hidden",
        "-Ifunctionsystem/src",
        "-Ifunctionsystem/src/function_proxy",
        "-Ifunctionsystem/src/function_proxy/local_scheduler",
        "-Ifunctionsystem/tests/unit",
        "-include",
        "functionsystem/tests/unit/gtest_sleep_compat.h",
    ],
    linkopts = [
        "-Wl,--no-as-needed",
        "-pthread",
        "-lcap",
        "-ldl",
    ],
    deps = [
        "//common/logs:logs_sdk",
        "//functionsystem/src/common:posix_pb",
        "//functionsystem/src/common:status",
        "//functionsystem/src/common:utils",
        "//functionsystem/src/function_proxy/local_scheduler:local_scheduler_lib",
        "@com_github_grpc_grpc//:grpc++",
        "@gtest//:gtest",
        "@litebus//:litebus",
    ],
)

cc_test(
    name = "service_registry_test",
    linkstatic = True,
    srcs = [
        "function_proxy/busproxy/registry/service_registry_test.cpp",
        "gtest_sleep_compat.h",
        "main.cpp",
    ] + glob([
        "mocks/*.h",
        "utils/*.h",
    ]),
    copts = COPTS + [
        "-Wno-error",
        "-fno-access-control",
        "-Wno-missing-field-initializers",
        "-fvisibility=hidden",
        "-Ifunctionsystem/src",
        "-Ifunctionsystem/src/function_proxy",
        "-Ifunctionsystem/tests/unit",
        "-include",
        "functionsystem/tests/unit/gtest_sleep_compat.h",
    ],
    linkopts = [
        "-Wl,--no-as-needed",
        "-pthread",
        "-lcap",
        "-ldl",
    ],
    deps = [
        "//common/logs:logs_sdk",
        "//functionsystem/src/common:metadata",
        "//functionsystem/src/common:status",
        "//functionsystem/src/function_proxy:function_proxy_base_lib",
        "//functionsystem/src/meta_store/client/cpp:meta_store_client",
        "@gtest//:gtest",
        "@litebus//:litebus",
        "@nlohmann_json//:nlohmann_json",
    ],
)

cc_test(
    name = "instance_ctrl_unit_test",
    linkstatic = True,
    srcs = [
        "function_proxy/local_scheduler/instance_control/instance_ctrl_test.cpp",
        "gtest_sleep_compat.h",
        "main.cpp",
    ] + glob([
        "common/etcd_service/*.h",
        "mocks/*.h",
        "utils/*.h",
    ]),
    copts = COPTS + [
        "-Wno-error",
        "-fno-access-control",
        "-Wno-missing-field-initializers",
        "-fvisibility=hidden",
        "-Ifunctionsystem/src",
        "-Ifunctionsystem/src/function_proxy",
        "-Ifunctionsystem/src/function_proxy/busproxy",
        "-Ifunctionsystem/src/function_proxy/local_scheduler",
        "-Ifunctionsystem/src/function_master",
        "-Ifunctionsystem/src/function_master/instance_manager",
        "-Ifunctionsystem/src/function_master/global_scheduler",
        "-Ifunctionsystem/src/function_master/scaler",
        "-Ifunctionsystem/src/function_master/system_function_loader",
        "-Ifunctionsystem/src/function_master/resource_group_manager",
        "-Ifunctionsystem/src/runtime_manager",
        "-Ifunctionsystem/src/domain_scheduler",
        "-Ifunctionsystem/src/function_agent",
        "-Ifunctionsystem/src/iam_server",
        "-Ifunctionsystem/src/meta_store/server/src",
        "-Ifunctionsystem/tests/unit",
        "-include",
        "functionsystem/tests/unit/gtest_sleep_compat.h",
    ],
    linkopts = [
        "-Wl,--no-as-needed",
        "-pthread",
        "-lcap",
        "-ldl",
    ],
    deps = [
        "//common/logs:logs_sdk",
        "//common/metrics:metrics_sdk",
        "//functionsystem/src/common:aksk",
        "//functionsystem/src/common:all_schedule_plugins",
        "//functionsystem/src/common:common_flags",
        "//functionsystem/src/common:explorer",
        "//functionsystem/src/common:file_monitor",
        "//functionsystem/src/common:heartbeat",
        "//functionsystem/src/common:hex",
        "//functionsystem/src/common:http",
        "//functionsystem/src/common:kube_client",
        "//functionsystem/src/common:leader",
        "//functionsystem/src/common:lru",
        "//functionsystem/src/common:metadata",
        "//functionsystem/src/common:metrics_adapter",
        "//functionsystem/src/common:meta_store_adapter",
        "//functionsystem/src/common:network",
        "//functionsystem/src/common:posix_pb",
        "//functionsystem/src/common:profile",
        "//functionsystem/src/common:register",
        "//functionsystem/src/common:resource_lock",
        "//functionsystem/src/common:resource_view",
        "//functionsystem/src/common:rpc",
        "//functionsystem/src/common:scheduler",
        "//functionsystem/src/common:scheduler_topology",
        "//functionsystem/src/common:service_json",
        "//functionsystem/src/common:status",
        "//functionsystem/src/common:trace_adapter",
        "//functionsystem/src/common:utils",
        "//functionsystem/src/common:yaml_tool",
        "//functionsystem/src/domain_scheduler:domain_scheduler_lib",
        "//functionsystem/src/function_agent:function_agent_lib",
        "//functionsystem/src/function_master:function_master_common_lib",
        "//functionsystem/src/function_master:function_master_sublibs",
        "//functionsystem/src/function_proxy:function_proxy_base_lib",
        "//functionsystem/src/function_proxy/local_scheduler:local_scheduler_lib",
        "//functionsystem/src/iam_server:iam_server_lib",
        "//functionsystem/src/meta_store/client/cpp:meta_store_client",
        "//functionsystem/src/meta_store/server:meta_store_lib",
        "//functionsystem/src/runtime_manager:runtime_manager_lib",
        "//functionsystem/tests/integration:future_test_helper",
        "@com_github_grpc_grpc//:gpr",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_protobuf//:protobuf",
        "@curl_sdk//:curl",
        "@datasystem_sdk//:datasystem_sdk",
        "@etcdapi//:etcdapi",
        "@gtest//:gtest",
        "@litebus//:litebus",
        "@minizip_sdk//:minizip_sdk",
        "@nlohmann_json//:nlohmann_json",
        "@obs_sdk//:obs_sdk",
        "@securec//:securec",
        "@yaml-cpp//:yaml-cpp",
    ],
)
