[package]
name = "yr-data-client-lite"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
yr-common = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
