load("@rules_cc//cc:defs.bzl", "cc_library")
load("@yuanrong_functionsystem//bazel:yr.bzl", "COPTS")

# local_scheduler_inc: include-provider for -Ifunctionsystem/src/function_proxy/
# and -Ifunctionsystem/src/
cc_library(
    name = "local_scheduler_inc",
    includes = ["."],
    deps = ["//functionsystem/src:src_root_inc"],
    visibility = ["//visibility:public"],
)

# local_scheduler_lib — mirrors CMake's local_scheduler_lib STATIC library
cc_library(
    name = "local_scheduler_lib",
    srcs = glob([
        "*.cpp",
        "function_agent_manager/**/*.cpp",
        "instance_control/**/*.cpp",
        "local_scheduler_service/**/*.cpp",
        "grpc_server/**/*.cpp",
        "abnormal_processor/**/*.cpp",
        "ds_healthy_checker/**/*.cpp",
        "debug_instance_info_monitor/**/*.cpp",
        "local_group_ctrl/**/*.cpp",
        "bundle_manager/**/*.cpp",
        "resource_group_controller/**/*.cpp",
        "subscription_manager/**/*.cpp",
        "snap_ctrl/**/*.cpp",
    ]),
    hdrs = glob(["**/*.h"]),
    copts = COPTS + ["-fPIE"],
    deps = [
        ":local_scheduler_inc",
        "//functionsystem/src/common:http",
        "//functionsystem/src/common:heartbeat",
        "//functionsystem/src/meta_store/client/cpp:meta_store_client",
        "//functionsystem/src/common:explorer",
        "//functionsystem/src/common:scheduler",
        "//functionsystem/src/common:metadata",
        "//functionsystem/src/function_proxy:function_proxy_base_lib",
        "//functionsystem/src/common:trace_adapter",
    ],
    visibility = ["//visibility:public"],
)
