load("@rules_cc//cc:defs.bzl", "cc_library")
load("@yuanrong_functionsystem//bazel:yr.bzl", "COPTS")

# meta_store_server_inc: include-provider for -Ifunctionsystem/src/
# and -Ifunctionsystem/src/meta_store/server/src/
cc_library(
    name = "meta_store_server_inc",
    includes = ["src"],
    deps = ["//functionsystem/src:src_root_inc"],
    visibility = ["//visibility:public"],
)

# meta_store_lib — mirrors CMake's meta_store_lib STATIC library
cc_library(
    name = "meta_store_lib",
    srcs = glob(["src/**/*.cpp"]),
    hdrs = glob(["src/**/*.h"]),
    copts = COPTS + ["-fPIE"],
    deps = [
        ":meta_store_server_inc",
        "//functionsystem/src/meta_store/client/cpp:meta_store_client",
        "//functionsystem/src/common:http",
        "//functionsystem/src/common:explorer",
        "//functionsystem/src/common:leader",
        "//functionsystem/src/common:utils",
        "//functionsystem/src/common:metadata",
    ],
    visibility = ["//visibility:public"],
)
